updateDeliveryTrip for note and vehicle
